# simple-tensorneat

./: README.md  pyproject.toml
examples/classification/: circle.py  spiral.py  xor.py
examples/func_fit/: xor.py
examples/rl/: evolve_slimevolley.py  evolve_slimevolley_evojax.py  evolve_slimevolley_evojax_selfplay.py  slimevolley_evojax_best_genome.pkl  test_slimevolley.py
src/: __init__.py  onnx_export.py  pipeline.py  visualizer.py  yed_export.py
src/algorithm/: __init__.py  base.py
src/algorithm/neat/: __init__.py  neat.py  species.py
src/common/: __init__.py  graph.py  state.py  stateful_class.py  tools.py
src/common/functions/: __init__.py  act_jnp.py  agg_jnp.py  manager.py
src/genome/: __init__.py  base.py  default.py  utils.py
src/genome/gene/: __init__.py  base.py
src/genome/gene/conn/: __init__.py  base.py  default.py
src/genome/gene/node/: __init__.py  base.py  bias.py  default.py
src/genome/operations/: __init__.py
src/genome/operations/crossover/: __init__.py  base.py  default.py
src/genome/operations/distance/: __init__.py  base.py  default.py
src/genome/operations/mutation/: __init__.py  base.py  default.py
src/problem/: __init__.py  base.py
src/problem/classification/: __init__.py  classification.py  generators.py
src/problem/func_fit/: __init__.py  custom.py  func_fit.py  xor.py
src/problem/rl/: __init__.py  base.py  evojax_slimevolley.py  slimevolley.py
